[Elisei](BNK-010) fix styling

--- a/src/main/resources/templates/accounts_submitted.html
+++ b/src/main/resources/templates/accounts_submitted.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width" name="viewport">
     <title>Bank App - Account for ${name}</title>
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -18,7 +19,8 @@
 </nav>
 
 <main>
-    <section>
+
+<section>
         <p th:text="'Saving account created!'"/>
     </section>
 
