--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,7 +1,3 @@
-html {
-    position: relative;
-    height: 100%;
-}
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -50,6 +46,15 @@ nav a:hover {
     color: white;
 }
 
+#display-accounts th {
+    background-color: #f2f2f2;
+}
+
+#display-accounts tr td {
+    padding: 15px;
+    text-align: left;
+}
+
 button {
     display: inline-block;
     border: none;
@@ -81,11 +86,46 @@ button:active {
     transform: scale(0.99);
 }
 
+select {
+    display: inline-block;
+    width: 16%;
+    font-size: 20px;
+    font-weight: 200;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+}
+
+label {
+    display: inline-block;
+    font-weight: 200;
+    font-size: 24px;
+    padding: 12px;
+}
+
+input {
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .5);
+    width: 24%;
+    font-weight: 200;
+    font-size: 20px;
+    padding-left: 6px;
+    outline: none;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
 footer {
-    position: absolute;
+    margin-top: 1vh;
     background-color: lightgray;
     border: 1px solid #717177;
-    bottom: 0;
     width: 100%;
 }
 
