--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width" name="viewport">
     <title>Bank App - Account for ${name}</title>
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -18,8 +19,32 @@
 </nav>
 
 <main>
+
     <section>
-        <p th:text="'Hello, ' + ${name} + '!'"/>
+        <p id="login-user" th:text="'Hello, ' + ${name} + '!'"/>
+    </section>
+
+    <section>
+        <h3>Overview</h3>
+        <p>All your accounts</p>
+        <table id="display-accounts">
+            <th>Accounts</th>
+            <th>Type</th>
+            <th>Amount</th>
+            <th>Currency</th>
+            <tr>
+                <td>INGBN0016250</td>
+                <td>Debit</td>
+                <td>11872.40</td>
+                <td>RON</td>
+            </tr>
+            <tr>
+                <td>INGBE0067620</td>
+                <td>Credit</td>
+                <td>44168.05</td>
+                <td>&euro; EUR</td>
+            </tr>
+        </table>
     </section>
 
     <p class="headset">These are hard times. It does not hurt to do some savings. To make it easier for you
@@ -51,17 +76,19 @@
             <input id="starting" min="01-01-1977" onfocus="(this.type='date')"
                    placeholder="01-01-1977" type="text">
 
+            <label for="occurrences">Choose frequency: </label>
             <select id="occurrences" th:field="*{currency}">
                 <option selected="selected" value="monthly"><strong>Monthly</strong></option>
                 <option value="weekly">Weekly</option>
-                <option value="bi-weeekly">Bi-Weekly</option>
+                <option value="bi-weekly">Bi-Weekly</option>
             </select>
-
-            <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+            <br/>
+            <input type="submit" value="Submit"/> <input type="reset" value="Reset"/>
         </form>
     </section>
 
 </main>
+
 <footer>
     <p class="stickToBottom" id="localDateTime"></p>
     <script crossorigin="anonymous"
@@ -69,5 +96,6 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js" type="text/javascript"></script>
 </footer>
+
 </body>
 </html>
