--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,3 +1,6 @@
+html {
+    height: 100%;
+}
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -123,6 +126,7 @@ input[type=button], input[type=submit], input[type=reset] {
 }
 
 footer {
+    position: absolute;
     margin-top: 1vh;
     background-color: lightgray;
     border: 1px solid #717177;
