[Elisei](BNK-023) add back link and default user

--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width" name="viewport">
-    <title>Bank App - Account for ${name}</title>
+    <title th:text="'My Accounts - ' + ${name}"></title>
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
@@ -21,7 +21,13 @@
 <main>
 
     <section>
-        <p id="login-user" th:text="'Hello, ' + ${name} + '!'"/>
+        <div th:if="${name}=='User'">
+            <p> Hello <b>stranger</b>! you can try login as <a href="/accounts?name=Cicero">Cicero</a>
+                to get a better user experience</p>
+        </div>
+        <div th:if="${name}!='User'">
+            <p id="login-user" th:text="'Hello, ' + ${name} + '!'"/>
+        </div>
     </section>
 
     <section>
@@ -34,10 +40,9 @@
             <th>Amount</th>
             <th>Currency</th>
             </thead>
-
             <tbody>
             <tr th:if="${accounts.empty}">
-                <td colspan="4"> No Accounts Available</td>
+                <td colspan="4" style="color:darkred; justify-content: center"> No Accounts Available!</td>
             </tr>
 
             <tr th:each="accountr : ${accounts}">
@@ -47,21 +52,9 @@
                 <td><span th:text="${accountr.currency}"> currency </span></td>
             </tr>
 
-            <tr>
-                <td>INGBN0016250</td>
-                <td>Debit</td>
-                <td>11872.40</td>
-                <td>RON</td>
-            </tr>
-            <tr>
-                <td>INGBE0067620</td>
-                <td>Credit</td>
-                <td>44168.05</td>
-                <td>&euro; EUR</td>
-            </tr>
             </tbody>
-
         </table>
+
     </section>
 
     <p class="headset">These are hard times. It does not hurt to do some savings. To make it easier for you
