--- a/src/main/resources/templates/accounts_submitted.html
+++ b/src/main/resources/templates/accounts_submitted.html
@@ -31,6 +31,9 @@
         </ol>
     </section>
 
+    <section>
+        <p><span id="back"><a href="/accounts?name=Cicero">Back</a></span></p>
+    </section>
     <p class="stickToBottom" id="localDateTime"></p>
 
 </main>
